--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "2.6.x",
     "sass": "^1.57.1",
-    "webpack": "5.21.2",
-    "webpack-cli": "3.3.12",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-stream": "^7.0.0"
   },
   "scripts": {
